--- a/index.html
+++ b/index.html
@@ -10,40 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
  <!--Load the AJAX API-->
  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
- <script type="text/javascript">
-   // Load Charts and the corechart and barchart packages.
-   google.charts.load('current', {'packages':['corechart']});
-
-   // Draw the pie chart and bar chart when Charts is loaded.
-   google.charts.setOnLoadCallback(drawChart);
-
-   function drawChart() {
-
-     var data = new google.visualization.DataTable();
-     data.addColumn('string', 'Topping');
-     data.addColumn('number', 'Slices');
-     data.addRows([
-       ['Mushrooms', 3],
-       ['Onions', 1],
-       ['Olives', 1],
-       ['Zucchini', 1],
-       ['Pepperoni', 2]
-     ]);
-
-     var piechart_options = {title:'Grafico uno',
-                    width:280,
-                    height:300};
-     var piechart = new google.visualization.PieChart(document.getElementById('piechart_div'));
-     piechart.draw(data, piechart_options);
-
-     var barchart_options = {title:'Grafico dos',
-                    width:280,
-                    height:300,
-                    legend: 'none'};
-     var barchart = new google.visualization.BarChart(document.getElementById('barchart_div'));
-     barchart.draw(data, barchart_options);
-   }
- </script>
+<script src="js/charts.js"></script>
 </head>
 
 </head>
@@ -60,9 +27,9 @@
                 <div class="card" style="width: 18rem;">
                     <div id="piechart_div" style="border: 1px solid #ccc"></div>
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Establecimientos activos</h5>
+                      <p class="card-text">Contenido del total de los 1001 establecimientos de la region de coquimbo en el sistema el año 2020 segun datos de la base del mineduc.</p>
+                      <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
                   </div>
           </div>
@@ -70,11 +37,11 @@
        <div class="col">
     <div>
         <div class="card" style="width: 18rem;">
-            <div id="barchart_div" style="border: 1px solid #ccc"></div>
+            <div id="linechart_material" style="border: 1px solid #ccc"></div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Establecimientos en el tiempo</h5>
+              <p class="card-text">En este grafico se muestra la evolucion de los establecimientos de la region de coquimbo y sus respectivos casos activos o inactivos.</p>
+              <a href="#" class="btn btn-dark">Go somewhere</a>
             </div>
           </div>
           
